fix character count reset, and add css to wrap text inside of posted tweets

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -97,6 +97,7 @@ main {
 .tweet-body {
   border-bottom-style: solid;
   padding: 0.5em;
+  overflow-wrap: break-word;
 
 }
 
